src/test/deca/context/invalid/sansobjet/not_incompat.deca
// Description : Utilisation du not avec une type impossible
// Resultat : not ne peut être appliqué à un entier : Erreur ligne 5.

{
    bool y =  !2;
}